templates/azure/Win10/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "utcValue": {
            "type": "string",
            "metadata": {
                "description": "Returns the current (UTC) datetime value in the specified format. If no format is provided, the ISO 8601 (yyyyMMddTHHmmssZ) format is used"
            },
            "defaultValue": "[utcNow()]"
        },
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "Username for the Virtual Machine."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "minLength": 12,
            "metadata": {
                "description": "Password for the all Virtual machines. The password must be at least 12 characters in length and must contain at least one digit, one non-alphanumeric character, and one upper or lower case letter"
            }
        },
        "remoteAccessMode": {
            "type": "string",
            "metadata": {
                "description": "Do you want to restrict access to your environment by a Public IP or set up an Azure Bastion Host. If the former, make sure you add your public IP address to the variable 'allowedIPAddresses'"
            },
            "defaultValue": "AllowPublicIP",
            "allowedValues": [
                "AllowPublicIP",
                "AzureBastionHost"
            ]
        },
        "allowedIPAddresses": {
            "type": "string",
            "metadata": {
                "description": "The sourceAddressPrefixes allowed to connect to this deployment"
            },
            "defaultValue": "*"
        },
        "azureBastionHostName": {
            "type": "string",
            "metadata": {
                "description": "Name of Azure Bastion Host assigned to the Virtual network in this template"
            },
            "defaultValue": "AzureBastionHost"
        },
        "numberOfWorkstations": {
            "type": "int",
            "minValue": 1,
            "maxValue": 100,
            "metadata": {
                "description": "Number of VMs to deploy"
            },
            "defaultValue": 1
        },
        "vmNamePrefix": {
            "type": "string",
            "metadata": {
                "description": "Prefix for the name of your virtual machine. You can set a Suffix with the vmNameSuffix parameter which only allows numbers."
            },
            "defaultValue": "WORKSTATION"
        },
        "vmNameSuffix": {
            "type": "int",
            "metadata": {
                "description": "Suffix number for the name of your virtual machine. This parameter only allows numbers and is aligned with the IP address."
            },
            "defaultValue": 5
        },
        "windowsDesktopSKU": {
            "type": "string",
            "metadata": {
                "description": "The Windows version for the Desktop VM. This will pick a fully patched image of this given Windows version."
            },
            "defaultValue": "19h2-pro",
            "allowedValues": [
                "19h1-pro",
                "19h2-pro",
                "rs4-pro",
                "rs5-pro",
                "20h1-pro",
                "20h2-pro",
                "21h1-pro"
            ]
        },
        "windowsDesktopVersion": {
            "type": "string",
            "defaultValue": "latest"
        },
        "vmSize": {
            "type": "string",
            "metadata": {
                "description": "Size of the virtual machine. Reference: https://docs.microsoft.com/en-us/azure/virtual-machines/sizes-general"
            },
            "defaultValue": "Standard_B2s",
            "allowedValues": [
                "Standard_A2",
                "Standard_A3",
                "Standard_B2s",
                "Standard_B2ms",
                "Standard_A2_v2",
                "Standard_A4_v2"
            ]
        },
        "identityType": {
            "type": "string",
            "metadata": {
                "description": "The type of identity used for the virtual machine. The type 'SystemAssigned, UserAssigned' includes both an implicitly created identity and a set of user assigned identities. The type 'None' will remove any identities from the virtual machine. - SystemAssigned, UserAssigned, None. Reference: https://docs.microsoft.com/en-us/azure/templates/microsoft.compute/virtualmachines?tabs=json#virtualmachineidentity-object"
            },
            "defaultValue": "None",
            "allowedValues": [
                "SystemAssigned",
                "UserAssigned",
                "None"
            ]
        },
        "userAssignedIdentities": {
            "type": "object",
            "metadata": {
                "description": "The list of user identities associated with the Virtual Machine. The user identity dictionary key references will be ARM resource ids in the form: '/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.ManagedIdentity/userAssignedIdentities/{identityName}"
            },
            "defaultValue": {}
        },
        "newVirtualNetwork": {
            "type": "bool",
            "metadata": {
                "description": "Is this a new virtual network? If so, set this to true."
            },
            "defaultValue": true
        },
        "existingSubnetId": {
            "type": "string",
            "metadata": {
                "description": "Id of existing subnet used while setting up the network settings for the virtual VM."
            },
            "defaultValue": ""
        },
        "virtualNetworkName": {
            "type": "string",
            "metadata": {
                "description": "Name of the Virtual Network"
            },
            "defaultValue": "vnet-win"
        },
        "virtualNetworkAddressRange": {
            "type": "string",
            "metadata": {
                "description": "Address Range of the virtual network"
            },
            "defaultValue": "192.168.0.0/16"
        },
        "subnetName": {
            "type": "string",
            "metadata": {
                "description": "Name of the subnet"
            },
            "defaultValue": "snet-win"
        },
        "subnetRange": {
            "type": "string",
            "metadata": {
                "description": "Address Range of the subnet"
            },
            "defaultValue": "192.168.2.0/24"
        },
        "azureBastionSubnetRange": {
            "type": "string",
            "metadata": {
                "description": "Address Range of the Azure Bastion service"
            },
            "defaultValue": "192.168.3.0/27"
        },
        "enableSysmon": {
            "type": "bool",
            "metadata": {
                "description": "Do you want to install Sysmon on the endpoint?"
            },
            "defaultValue": false
        },
        "enableAntimalware": {
            "type": "bool",
            "metadata": {
                "description": "Enable Antimalware extension to filter out some folders and file extensions from the Windows Defender service"
            },
            "defaultValue": false
        },
        "_artifactsLocation": {
            "type": "string",
            "metadata": {
                "description": "The location of resources, such as templates and DSC modules, that the template depends on"
            },
            "defaultValue": "https://raw.githubusercontent.com/OTRF/Blacksmith/master/"
        },
        "_artifactsLocationSasToken": {
            "type": "securestring",
            "metadata": {
                "description": "Auto-generated token to access _artifactsLocation. Leave it blank unless you need to provide your own value."
            },
            "defaultValue": ""
        },
        "location": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            },
            "defaultValue": "[resourceGroup().location]"
        }
    },
    "variables": {
        "storageAccountName": "[concat(uniquestring(resourceGroup().id, parameters('utcValue')))]",
        
        // Virtual Network Setup
        "virtualNetworkName": "[parameters('virtualNetworkName')]",
        "virtualNetworkAddressRange": "[parameters('virtualNetworkAddressRange')]",
        "subnetName": "[parameters('subnetName')]",
        "subnetRange": "[parameters('subnetRange')]",
        "vmPrivateIPPrefixArray": "[take(split(variables('subnetRange'),'.'),3)]",
        "vmPrivateIPAddresPrefix": "[format('{0}.{1}.{2}.',variables('vmPrivateIPPrefixArray')[0], variables('vmPrivateIPPrefixArray')[1], variables('vmPrivateIPPrefixArray')[2])]",
        "subnetRef": "[if(and(parameters('newVirtualNetwork'),empty(parameters('existingSubnetId'))),resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName')), parameters('existingSubnetId'))]",
        "nsg-default-name": "nsg-rdp-allow",
        "nsg-id": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg-default-name'))]"
        },
        "subnets": [
            {
                "name": "[variables('subnetName')]",
                "properties": {
                    "addressPrefix": "[variables('subnetRange')]"
                }
            }
        ],
        //Bastion Host Network
        "bastionSubnetName": "AzureBastionSubnet",
        "nsg-bastion-host-name": "nsg-bastion-host",
        "azureBastionSubnet": [
            {
                "name": "[variables('bastionSubnetName')]",
                "properties": {
                    "addressPrefix": "[parameters('azureBastionSubnetRange')]",
                    "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg-bastion-host-name'))]"
                    }
                }
            }
        ],
        "allSubnets": "[if(equals(parameters('remoteAccessMode'),'AzureBastionHost'), concat(variables('subnets'), variables('azureBastionSubnet')), variables('subnets'))]",
        
        //Nested Templates
        "sysmonInstallTemplateUri": "[uri(parameters('_artifactsLocation'), concat('templates/azure/Win10/nestedtemplates/sysmonInstall.json', parameters('_artifactsLocationSasToken')))]",
        
        //Custom Scripts
        "initialSettingsScript": "[uri(parameters('_artifactsLocation'), concat('templates/azure/Win10/scripts/Set-Initial-Settings.ps1', parameters('_artifactsLocationSasToken')))]",
        "prepareBoxScript": "[uri(parameters('_artifactsLocation'), concat('resources/scripts/powershell/misc/Prepare-Box.ps1', parameters('_artifactsLocationSasToken')))]",
        "disarmBoxScript": "[uri(parameters('_artifactsLocation'), concat('resources/scripts/powershell/misc/Disarm-Box.ps1', parameters('_artifactsLocationSasToken')))]",
        "disarmFirewallScript": "[uri(parameters('_artifactsLocation'), concat('resources/scripts/powershell/misc/Disarm-Firewall.ps1', parameters('_artifactsLocationSasToken')))]",
        "configurePSRemotingScript": "[uri(parameters('_artifactsLocation'), concat('resources/scripts/powershell/misc/Configure-PSRemoting.ps1', parameters('_artifactsLocationSasToken')))]",
        "setSecurityAuditingScript": "[uri(parameters('_artifactsLocation'), concat('resources/scripts/powershell/auditing/Enable-WinAuditCategories.ps1', parameters('_artifactsLocationSasToken')))]",
        "setPowerShellLogging": "[uri(parameters('_artifactsLocation'), concat('resources/scripts/powershell/auditing/Enable-PowerShell-Logging.ps1', parameters('_artifactsLocationSasToken')))]",
        "saclModule": "https://raw.githubusercontent.com/OTRF/Set-AuditRule/master/Set-AuditRule.ps1",
        "setSACLScript": "[uri(parameters('_artifactsLocation'), 'resources/scripts/powershell/auditing/Set-SACLs.ps1')]",
        "setWallPaperScript": "[uri(parameters('_artifactsLocation'), concat('resources/scripts/powershell/misc/Set-WallPaper.ps1', parameters('_artifactsLocationSasToken')))]",
        
        //Powershell DSC Scripts
        "dscModules": "[uri(parameters('_artifactsLocation'), concat('templates/azure/Win10/scripts/Install-DSC-Modules.ps1', parameters('_artifactsLocationSasToken')))]",
        "installSysmonScript": "[uri(parameters('_artifactsLocation'), concat('resources/scripts/powershell/dsc/software/Install-Sysmon.zip', parameters('_artifactsLocationSasToken')))]",

        //Initial Setup Scripts
        "initialSetUpScripts": [
            "[variables('initialSettingsScript')]",
            "[variables('dscModules')]",
            "[variables('prepareBoxScript')]",
            "[variables('disarmBoxScript')]",
            "[variables('disarmFirewallScript')]",
            "[variables('configurePSRemotingScript')]",
            "[variables('setSecurityAuditingScript')]",
            "[variables('setPowerShellLogging')]",
            "[variables('saclModule')]",
            "[variables('setSACLScript')]",
            "[variables('setWallPaperScript')]"
        ],

        "copy": [
            {
                "name": "allWinWKS",
                "count": "[parameters('numberOfWorkstations')]",
                "input": {
                    "tag": "workstation",
                    "vmName": "[concat(parameters('vmNamePrefix'),copyIndex('allWinWKS',parameters('vmNameSuffix')))]",
                    "os": "windows",
                    "subnetref": "[variables('subnetRef')]",
                    "ipAddress": "[concat(variables('vmPrivateIPAddresPrefix'),copyIndex('allWinWKS',parameters('vmNameSuffix')))]",
                    "vmSize": "[parameters('vmSize')]",
                    "publisher": "MicrosoftWindowsDesktop",
                    "offer": "Windows-10",
                    "sku": "[parameters('windowsDesktopSKU')]",
                    "version": "[parameters('windowsDesktopVersion')]",
                    "extensionName": "SetupWinVM"
                }
            }
        ],

        // Managed Identity
        "identityType": {"type": "[parameters('identityType')]"},
        "userAssignedIdentities": {"userAssignedIdentities": "[parameters('userAssignedIdentities')]"},
        "identity" : "[if(empty(parameters('userAssignedIdentities')), variables('identityType'), union(variables('identityType'), variables('userAssignedIdentities')))]"
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2018-11-01",
            "name": "[variables('storageAccountName')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage",
            "properties": {}
        },
        {
            "condition": "[and(equals(parameters('remoteAccessMode'), 'AllowPublicIP'), parameters('newVirtualNetwork'))]",
            "comments": "Default Network Security Group for Windows endpoints",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-08-01",
            "name": "[variables('nsg-default-name')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-3389",
                        "properties": {
                            "priority": 100,
                            "access": "Allow",
                            "direction": "Inbound",
                            "destinationPortRange": "3389",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "[parameters('allowedIPAddresses')]",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "condition": "[and(equals(parameters('remoteAccessMode'), 'AzureBastionHost'),parameters('newVirtualNetwork'))]",
            "comments": "Default Network Security Group for Azure Bastion Host",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-08-01",
            "name": "[variables('nsg-bastion-host-name')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowHTTPsInbound",
                        "properties": {
                            "priority": 100,
                            "access": "Allow",
                            "direction": "Inbound",
                            "destinationPortRange": "443",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "AllowGatewayManagerInbound",
                        "properties": {
                            "priority": 110,
                            "access": "Allow",
                            "direction": "Inbound",
                            "destinationPortRange": "443",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "GatewayManager",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "AllowSshRdpOutbound",
                        "properties": {
                            "priority": 100,
                            "access": "Allow",
                            "direction": "Outbound",
                            "destinationPortRanges": [
                                "22",
                                "3389"
                            ],
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork"
                        }
                    },
                    {
                        "name": "AllowAzureCloudOutbound",
                        "properties": {
                            "priority": 110,
                            "access": "Allow",
                            "direction": "Outbound",
                            "destinationPortRange": "443",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "AzureCloud"
                        }
                    }
                ]
            }
        },
        {
            "condition": "[parameters('newVirtualNetwork')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-02-01",
            "name": "[variables('virtualNetworkName')]",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('virtualNetworkAddressRange')]"
                    ]
                },
                "subnets": "[variables('allSubnets')]"
            }
        },
        {
            "condition": "[and(equals(parameters('remoteAccessMode'),'AzureBastionHost'),parameters('newVirtualNetwork'))]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2018-11-01",
            "name": "[concat('pip-', parameters('azureBastionHostName'))]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "condition": "[and(equals(parameters('remoteAccessMode'),'AzureBastionHost'),parameters('newVirtualNetwork'))]",
            "type": "Microsoft.Network/bastionHosts",
            "apiVersion": "2020-05-01",
            "name": "[parameters('azureBastionHostName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses/', concat('pip-', parameters('azureBastionHostName')))]",
                "[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "IpConf",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses/', concat('pip-', parameters('azureBastionHostName')))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets',parameters('virtualNetworkName'), variables('bastionSubnetName'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "condition": "[equals(parameters('remoteAccessMode'),'AllowPublicIP')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2018-11-01",
            "name": "[concat('pip-', variables('allWinWKS')[copyIndex('vmPublicIpCopy')].vmName)]",
            "location": "[parameters('location')]",
            "copy": {
                "name": "vmPublicIpCopy",
                "count": "[length(variables('allWinWKS'))]"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[toLower(concat(variables('allWinWKS')[copyIndex('vmPublicIpCopy')].vmName, '-', uniquestring(resourceGroup().id, parameters('utcValue'))))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "name": "[concat('nic-', variables('allWinWKS')[copyIndex('vmNetworkInterfaceCopy')].vmName)]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses/', concat('pip-', variables('allWinWKS')[copyIndex('vmNetworkInterfaceCopy')].vmName))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg-default-name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
            ],
            "copy": {
                "name": "vmNetworkInterfaceCopy",
                "count": "[length(variables('allWinWKS'))]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[variables('allWinWKS')[copyIndex('vmNetworkInterfaceCopy')].ipAddress]",
                            "publicIPAddress": "[if(equals(parameters('remoteAccessMode'),'AllowPublicIP'), json(concat('{\"id\":', '\"', resourceId('Microsoft.Network/publicIPAddresses/', concat('pip-', variables('allWinWKS')[copyIndex('vmNetworkInterfaceCopy')].vmName)),'\"}')),json('null'))]",
                            "subnet": {
                                "id": "[if(parameters('newVirtualNetwork'), variables('allWinWKS')[copyIndex('vmNetworkInterfaceCopy')].subnetref, parameters('existingSubnetId'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": "[if(and(parameters('newVirtualNetwork'), equals(parameters('remoteAccessMode'), 'AllowPublicIP')), variables('nsg-id'), json('null'))]"
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2018-10-01",
            "name": "[variables('allWinWKS')[copyIndex('vmVMCopy')].vmName]",
            "location": "[parameters('location')]",
            "identity": "[variables('identity')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
                "[resourceId('Microsoft.Network/networkInterfaces/', concat('nic-', variables('allWinWKS')[copyIndex('vmVMCopy')].vmName))]"
            ],
            "copy": {
                "name": "vmVMCopy",
                "count": "[length(variables('allWinWKS'))]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('allWinWKS')[copyIndex('vmVMCopy')].vmSize]"
                },
                "osProfile": {
                    "computerName": "[variables('allWinWKS')[copyIndex('vmVMCopy')].vmName]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('allWinWKS')[copyIndex('vmVMCopy')].publisher]",
                        "offer": "[variables('allWinWKS')[copyIndex('vmVMCopy')].offer]",
                        "sku": "[variables('allWinWKS')[copyIndex('vmVMCopy')].sku]",
                        "version": "[variables('allWinWKS')[copyIndex('vmVMCopy')].version]"
                    },
                    "osDisk": {
                        "createOption": "FromImage"
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat('nic-', variables('allWinWKS')[copyIndex('vmVMCopy')].vmName))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "name": "[concat(variables('allWinWKS')[copyIndex('InitialSetUpWKSCopy')].vmName, '/', variables('allWinWKS')[copyIndex('InitialSetUpWKSCopy')].extensionName)]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "apiVersion": "2019-12-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', variables('allWinWKS')[copyIndex('InitialSetUpWKSCopy')].vmName)]"
            ],
            "copy": {
                "name": "InitialSetUpWKSCopy",
                "count": "[length(variables('allWinWKS'))]"
            },
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": "[variables('initialSetUpScripts')]",
                    "commandToExecute": "powershell -ExecutionPolicy Unrestricted -File ./Set-Initial-Settings.ps1"
                },
                "protectedSettings": {}
            }
        },
        {
            "condition": "[parameters('enableSysmon')]",
            "name": "[concat(variables('allWinWKS')[copyIndex('vmSysmonSetUpCopy')].vmName, '-installSysmon')]",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2019-10-01",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines/extensions', variables('allWinWKS')[copyIndex('vmSysmonSetupCopy')].vmName, variables('allWinWKS')[copyIndex('vmSysmonSetupCopy')].extensionName)]"
            ],
            "copy": {
                "name": "vmSysmonSetupCopy",
                "count": "[length(variables('allWinWKS'))]"
            },
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('sysmonInstallTemplateUri')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "vmName":   {
                        "value": "[variables('allWinWKS')[copyIndex('vmSysmonSetupCopy')].vmName]"
                    },
                    "installSysmonScript": {
                        "value": "[variables('installSysmonScript')]"
                    },
                    "location": {
                        "value": "[parameters('location')]"
                    }
                }
            }
        },
        {
            "condition": "[parameters('enableAntimalware')]",
            "name": "[concat(variables('allWinWKS')[copyIndex('vmAntiMalwareSetupCopy')].vmName, '/AntiMalware')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "apiVersion": "2019-12-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "vmVMCopy"
            ],
            "copy": {
                "name": "vmAntiMalwareSetupCopy",
                "count": "[length(variables('allWinWKS'))]"
            },
            "properties": {
                "publisher": "Microsoft.Azure.Security",
                "type": "IaaSAntimalware",
                "typeHandlerVersion": "1.3",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "AntimalwareEnabled": true,
                    "Exclusions": {
                        "Extensions": ".bat;.exe;.dll;.ps1;.sct;.vbs;.hta;.py;.tmp;.csproj",
                        "Paths": "C:\\",
                        "Processes": "powershell.exe;sandcat.exe"
                    },
                    "RealtimeProtectionEnabled": "false",
                    "ScheduledScanSettings": {
                        "isEnabled": "false",
                        "scanType": "Quick",
                        "day": "8",
                        "time": "120"
                    }
                },
                "protectedSettings": null
            }
        }
    ],
    "outputs": {
        "virtualNetworkName": {
            "type": "string",
            "value": "[variables('virtualNetworkName')]"
        },
        "virtualNetworkId": {
            "type": "string",
            "value": "[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
        },
        "subnetId": {
            "type": "string",
            "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName'))]"
        },
        "allWinVMsDeployed": {
            "type": "array",
            "value": "[variables('allWinWKS')]"
        }
    }
}
